# superphot-plus

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prepare_project.sh  .readthedocs.yml  LICENSE  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  train.py  train_classifier.py  train_mosfit.py  tune.py  tune_classifier.py  tune_mosfit.py
.github/: pull_request_template.md
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  benchmarks.yml  build-documentation.yml  linting.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 0031a27f-virtualenv-py3.10-Cython-build-packaging.json  0221ae5b-virtualenv-py3.10-Cython-build-packaging.json  0283df97-virtualenv-py3.10-Cython-build-packaging.json  02dfdf5a-virtualenv-py3.10-Cython-build-packaging.json  0360fdc0-virtualenv-py3.10-Cython-build-packaging.json  04f90e66-virtualenv-py3.10-Cython-build-packaging.json  06eaf129-virtualenv-py3.10-Cython-build-packaging.json  06f6055c-virtualenv-py3.10-Cython-build-packaging.json  08417db3-virtualenv-py3.10-Cython-build-packaging.json  0947f17c-virtualenv-py3.10-Cython-build-packaging.json  09703ed3-virtualenv-py3.10-Cython-build-packaging.json  09a6060f-virtualenv-py3.10-Cython-build-packaging.json  0b411fff-virtualenv-py3.10-Cython-build-packaging.json  118389e0-virtualenv-py3.10-Cython-build-packaging.json  18298dbc-virtualenv-py3.10-Cython-build-packaging.json  1924bbc1-virtualenv-py3.10-Cython-build-packaging.json  1b18cf73-virtualenv-py3.10-Cython-build-packaging.json  1d85c57c-virtualenv-py3.10-Cython-build-packaging.json  1f5506e5-virtualenv-py3.10-Cython-build-packaging.json  22e320f1-virtualenv-py3.10-Cython-build-packaging.json  23ac274e-virtualenv-py3.10-Cython-build-packaging.json  23eeba57-virtualenv-py3.10-Cython-build-packaging.json  2765a737-virtualenv-py3.10-Cython-build-packaging.json  2ac47eb7-virtualenv-py3.10-Cython-build-packaging.json  2d679a6f-virtualenv-py3.10-Cython-build-packaging.json  2dd18bb3-virtualenv-py3.10-Cython-build-packaging.json  316023ba-virtualenv-py3.10-Cython-build-packaging.json  338396d9-virtualenv-py3.10-Cython-build-packaging.json  368e32ac-virtualenv-py3.10-Cython-build-packaging.json  37efb5ef-virtualenv-py3.10-Cython-build-packaging.json  3808893c-virtualenv-py3.10-Cython-build-packaging.json  39177471-virtualenv-py3.10-Cython-build-packaging.json  3dcb81c7-virtualenv-py3.10-Cython-build-packaging.json  42d00b0e-virtualenv-py3.10-Cython-build-packaging.json  44832f0e-virtualenv-py3.10-Cython-build-packaging.json  45c24d32-virtualenv-py3.10-Cython-build-packaging.json  4638bfcf-virtualenv-py3.10-Cython-build-packaging.json  4712e71e-virtualenv-py3.10-Cython-build-packaging.json  4abbd6a5-virtualenv-py3.10-Cython-build-packaging.json  4b750b7c-virtualenv-py3.10-Cython-build-packaging.json  (+75 more)
benchmarks/: asv.conf.json  benchmark_samplers.py  conftest.py  preprocess_bench.py  test_benchmarks.py  test_inference.py
benchmarks/asv/: constants.py  inference_suite.py  sampling_suite.py  test_fit.py
benchmarks/data/: ZTF22abvdwik.csv  ZTF22abvdwik.npz  superphot-model-ZTF23aagkgnz.pt
benchmarks/superphot_plus/: benchmark_samplers.py  test_fit.py  test_inference.py
data/: slsn.json  superphot_plus_paper_pipeline.ipynb  training_set.csv
data/generation/: make_fake_spp_data.py
data/tutorial/: model_superphot_full.pt
dev/bench/: data.js
docs/: conf.py  contributing.rst  index.rst  notebooks.rst  requirements.txt
docs/notebooks/: config.yaml  full_train_workflow.ipynb  tutorial.ipynb
examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  tutorial-checkpoint.ipynb
examples/outputs/: ZTF22abvdwik_eqwt_NUTS.npz  ZTF22abvdwik_eqwt_dynesty.npz  ZTF22abvdwik_eqwt_svi.npz
graphs/summary/: inference_suite.InferenceSuite.time_dynesty_inference.json  inference_suite.InferenceSuite.time_numpyro_nuts_inference.json  inference_suite.InferenceSuite.time_numpyro_svi_inference.json  sampling_suite.SamplingSuite.time_dynesty_single_file.json  sampling_suite.SamplingSuite.time_iminuit_single_file.json  sampling_suite.SamplingSuite.time_licu_ceres_single_file.json  sampling_suite.SamplingSuite.time_licu_mcmc_ceres_single_file.json  sampling_suite.SamplingSuite.time_nuts_single_file.json  sampling_suite.SamplingSuite.time_svi_single_file.json
scripts/: generate_fits.py  generate_mosfit.py  train_classifier.py  train_mosfit.py  tune_classifier.py  tune_mosfit.py
src/: .pylintrc
src/superphot_plus/: SupernovaClass.py  __init__.py  classify_ztf.py  config.py  constants.py  custom_mala.py  elasticc_class.py  file_paths.py  file_utils.py  fit_flowmc.py  fit_numpyro.py  format_data_ztf.py  import_utils.py  import_ztf_from_alerce.py  lightcurve.py  load_data.py  mlp.py  nested_cv.py  plotting.py  posterior_samples.py  predictor.py  supernova_class.py  supernova_properties.py  surveys.py  telescopes.py  trainer.py  trainer_base.py  tune_model.py  tuner.py  tutorial.ipynb  utils.py  ztf_transient_fit.py
superphot+/: add_extinction.py  file_paths.py  import_ztf_from_alerce.py  plotting.py
superphot+/.ipynb_checkpoints/: classify_ztf-checkpoint.py  format_data_ztf-checkpoint.py  mlp-checkpoint.py  ztf_transient_fit-checkpoint.py
superphot-plus/: constants.py  fit-numpyro.py
superphot-plus/.ipynb_checkpoints/: classify_ztf-checkpoint.py  file_paths-checkpoint.py  import_ztf_from_alerce-checkpoint.py  ztf_transient_fit-checkpoint.py
superphot_plus/: constants.py  fit_numpyro.py  plotting.py  tutorial.ipynb
superphot_plus/.ipynb_checkpoints/: plotting-checkpoint.py  tutorial-checkpoint.ipynb  utils-checkpoint.py  ztf_transient_fit-checkpoint.py
tests/: .pylintrc  conftest.py
tests/data/: ZTF22aarqrxf_eqwt_dynesty.npz  ZTF22abcesfo_eqwt_dynesty.npz  ZTF22abvdwik.npz  ZTF22abvdwik_eqwt.npz  ZTF22abvdwik_eqwt_NUTS.npz  ZTF22abvdwik_eqwt_dynesty.npz  ZTF22abvdwik_eqwt_svi.npz  ZTF22abytwjj_eqwt_dynesty.npz  ZTF23aacrvqj_eqwt_dynesty.npz  probs.csv  probs_snr.csv  sample.snana.txt  superphot-config-ZTF-testname.json  test_cf.csv  (+7 more)
(+127 files in other folders)
