[project]
name = "superphot-plus"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Kaylee de Soto", email = "kaylee.de_soto@cfa.harvard.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    "astropy",
    "dustmaps",
    "joblib",
    "extinction",
    "lightgbm",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "tensorboard",
    "tensorflow_probability"
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "ipykernel", # Support for Jupyter notebooks
    "ipython", # Also used in building notebooks into Sphinx
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
    "nbval", # Used to run Jupyter notebooks with pytest
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx", # Used to automatically generate documentation
    "sphinx-rtd-theme", # Used to render documentation
    "sphinx-autoapi", # Used to automatically generate api documentation
    "pylint", # Used for static linting of files
]
data-generation = [
    "alerce",
    "antares_client",
]
sampling = [
    "dynesty",
    "numpyro",
    "imblearn",
    "iminuit",
    "light-curve>=0.8,<0.9",
]
plotting = [
    "arviz",
    "colorcet",
    "corner",
    "matplotlib",
]
tuning = [
    "ray[tune]", # Hyperparameter tuning library
    "optuna", # Optimization search algorithm
]
benchmarking = [
    "asv==0.5.1", # Used to compute performance benchmarks
    "memory_profiler", # Used to benchmark memory usage
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/superphot_plus/_version.py"

[tool.pytest.ini_options]
pythonpath = [
    "src", 
    "scripts",
]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110

[tool.coverage.report]
omit = [
    "src/superphot_plus/_version.py", # auto-generated
]
