[project]
name = "superphot-plus"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Kaylee de Soto", email = "kaylee.de_soto@cfa.harvard.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "astropy>=6.0.1",
    "dustmaps>=1.0.13",
    "joblib>=1.4.0",
    "extinction>=0.4.6",
    "lightgbm>=4.3.0",
    "numpy==1.26.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "torch>=2.2.2",
    "tensorboard>=2.16.2",
    "tensorflow_probability>=0.24.0"
]

[project.urls]
"Source Code" = "https://github.com/VTDA-Group/superphot-plus"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "ipykernel", # Support for Jupyter notebooks
    "ipython", # Also used in building notebooks into Sphinx
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
    "nbval", # Used to run Jupyter notebooks with pytest
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx", # Used to automatically generate documentation
    "sphinx-rtd-theme", # Used to render documentation
    "sphinx-autoapi", # Used to automatically generate api documentation
    "pylint", # Used for static linting of files
]
data-generation = [
    "alerce>=1.2.0",
    "antares_client>=1.8.0",
]
sampling = [
    "dynesty>=2.1.3",
    "numpyro>=0.14.0",
    "imbalanced-learn>=0.12.2",
    "iminuit>=2.25.2",
    "light-curve>=0.9",
]
plotting = [
    "arviz",
    "colorcet>=3.1.0",
    "corner>=2.2.2",
    "matplotlib>=3.8.4",
    "pacmap>=0.7.2",
    "scipy==1.12.0"
]
tuning = [
    "ray[tune]>=2.11.0", # Hyperparameter tuning library
    "optuna", # Optimization search algorithm
]
benchmarking = [
    "asv==0.6.3", # Used to compute performance benchmarks
    "memory_profiler>=0.61.0", # Used to benchmark memory usage
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/superphot_plus/_version.py"

[tool.pytest.ini_options]
pythonpath = [
    "src", 
    "scripts",
]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",

]

ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]

[tool.coverage.run]
omit=["src/superphot_plus/_version.py"]
